--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
 }
 
+// Added by developer
+apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
+
 android {
     compileSdk 32
 
@@ -35,4 +39,33 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Added by developer
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+
+    // ----- Room -----
+    def room_version = "2.4.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // ----- Retrofit -----
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    // ----  Hilt ------
+    implementation 'com.google.dagger:hilt-android:2.40.1'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+
+    // For instrumentation tests
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.40.1'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.40.1'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+
 }
