--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,8 @@ dependencies {
 
 
     // ----- Room -----
-    def room_version = "2.4.1"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.4.2"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
 
     // ----- Retrofit -----
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -64,15 +63,15 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
     // ----  Hilt ------
-    implementation 'com.google.dagger:hilt-android:2.40.1'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+    implementation 'com.google.dagger:hilt-android:2.42'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.42'
 
     // For instrumentation tests
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.40.1'
-    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.42'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.42'
 
     // For local unit tests
-    testImplementation 'com.google.dagger:hilt-android-testing:2.40.1'
-    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.40.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.42'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.42'
 
 }
